# CoreSpecViewer

./: .gitignore  README.md  TODO.md  environment.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/create_report/: pdf_booklet.py  report_dialogue.py
app/interface/: profile_tools.py  tools.py
app/models/: context.py  dataset.py  hole_object.py  processed_object.py  raw_object.py
app/spectral_ops/: IO.py  __init__.py  _legacy.py  analysis.py  band_maths.py  downhole_resampling.py  export_ops.py  fenix_smile.py  masking.py  processing.py  visualisation.py
app/ui/: __init__.py  band_math_dialogue.py  base_actions.py  base_page.py  box_ops.py  cluster_window.py  display_text.py  hole_actions.py  hole_page.py  lib_page.py  load_dialogue.py  mask_actions.py  raw_actions.py  raw_page.py  ribbon.py  util_windows.py  vis_actions.py  vis_page.py
tests/: integration_test.py  test_config_integration.py
tests/test_data/: TestDB.db
tests/test_data/Synthetic_test_box/capture/: DARKREF_synthetic_test.hdr  WHITEREF_synthetic_test.hdr  synthetic_test.hdr
tests/test_data/Synthetic_test_box/metadata/: synthetic_test.xml
