[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "corespecviewer"
version = "1.0.1"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "numba>=0.60",
    "matplotlib>=3.9",
    "PyQt5==5.15.10",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "spectral>=0.23",
    "hylite>=1.36",
    "gfit>=0.2",
    "reportlab>4.0"
]

[project.scripts]
corespecviewer = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]